8199342: The constant pool forgets it has a Dynamic entry if there are overpass methods

Reviewed-by: lfoltan, acorn